# homework

./: .gitignore  .gitmodules
pass/: CMakeLists.txt  README.md  build.sh  setup.sh
pass/src/: CMakeLists.txt  adjust_layout.cpp  adjust_layout.hpp  adjust_layout.mlir  adjust_layout.td  my-opt.cpp
transpose/: README  transpose.cpp
